--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vue3-easy-data-table": "^1.5.47"
+    "vue3-easy-data-table": "^1.5.47",
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
