--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "bootswatch": "^5.3.8",
+    "chart.js": "^4.5.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^4.0.3",
     "vue3-easy-data-table": "^1.5.47",
+    "vue3-spinners": "^1.3.3",
     "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
