--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootswatch": "^5.3.8",
     "chart.js": "^4.5.1",
     "core-js": "^3.8.3",
+    "pinia": "^3.0.4",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.3",
     "vue-router": "^4.0.3",
