--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,7 @@ pydantic_settings==2.12.0
 python_jose==3.4.0
 reportlab==4.4.9
 SQLAlchemy==2.0.46
+aiosqlite==0.21.0
+uvicorn== 0.34.2
+bcrypt==5.0.0
+pydantic[email]
